fix(wof-slides): web share api - spacing

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -157,7 +157,6 @@ figure[slot='content'] {
   text-align: center;
   margin: 0;
   width: 100%;
-  padding: 1em;
   max-height: 100%;
 }
 
